# roboteam_ai

./: .clang-format  .gitignore  .travis.rosinstall  .travis.yml  AggressiveStopFormation_8cpp.html  AggressiveStopFormation_8h.html  AggressiveStopFormation_8h_source.html  AnglePID_8cpp.html  AnglePID_8h.html  AnglePID_8h_source.html  ApplicationManager_8cpp.html  ApplicationManager_8h.html  ApplicationManager_8h_source.html  Attack_8cpp.html  Attack_8h.html  Attack_8h_source.html  Attacker_8cpp.html  Attacker_8h.html  Attacker_8h_source.html  AttackingPass_8cpp.html  AttackingPass_8h.html  AttackingPass_8h_source.html  AvoidBall_8cpp.html  AvoidBall_8h.html  AvoidBall_8h_source.html  BBTPathPlanning_8cpp.html  BBTPathPlanning_8h.html  BBTPathPlanning_8h_source.html  BBTPathTracking_8cpp.html  BBTPathTracking_8h.html  BBTPathTracking_8h.js  BBTPathTracking_8h_source.html  BBTrajectory1DTest_8cpp.html  BBTrajectory1DTest_8cpp.js  BBTrajectory1D_8cpp.html  BBTrajectory1D_8h.html  BBTrajectory1D_8h_source.html  BBTrajectory2D_8cpp.html  BBTrajectory2D_8h.html  BBTrajectory2D_8h_source.html  (+1746 more)
roboteam_ai/src/: ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  RoleNode.cpp  StrategyComposer.cpp  StrategyComposer.hpp  StrategyNode.cpp  Switches.cpp  Switches.h  roboteam_ai.cpp
roboteam_ai/src/DangerFinder/: DangerData.cpp  DangerData.h  DangerFinder.cpp  DangerFinder.h  DangerFinderConfig.cpp  DangerFinderConfig.h  PartialResult.cpp  PartialResult.h
roboteam_ai/src/analysis/: AnalysisReport.cpp  AnalysisReport.h  BallModel.cpp  BallModel.h  DecisionMaker.cpp  DecisionMaker.h  GameAnalyzer.cpp  GameAnalyzer.h  RobotDanger.cpp  RobotDanger.h
roboteam_ai/src/bt/: BehaviorTree.cpp  BehaviorTree.hpp  Blackboard.cpp  Blackboard.hpp  CMakeLists.txt  Composite.cpp  Composite.hpp  Decorator.cpp  Decorator.hpp  Leaf.cpp  Leaf.hpp  Node.cpp  Node.hpp  Role.cpp  Role.h  RoleDivider.cpp  RoleDivider.h  Tactic.cpp  Tactic.h  bt.hpp
roboteam_ai/src/coach/: Ballplacement.cpp  Ballplacement.h  BallplacementCoach.cpp  BallplacementCoach.h  CoachHeuristics.cpp  CoachHeuristics.h  DefenceDealer.cpp  DefenceDealer.h  DefencePositionCoach.cpp  DefencePositionCoach.h  Defense.cpp  Defense.h  DefensiveCoach.cpp  DefensiveCoach.h  Formation.cpp  Formation.h  FormationCoach.cpp  FormationCoach.h  GeneralPositionCoach.cpp  GeneralPositionCoach.h  GetBallCoach.cpp  GetBallCoach.h  Offense.cpp  Offense.h  OffensiveCoach.cpp  OffensiveCoach.h  Pass.cpp  Pass.h  PassCoach.cpp  PassCoach.h  TrumpCoach.cpp
roboteam_ai/src/conditions/: BallInDefenseAreaAndStill.cpp  BallInDefenseAreaAndStill.h  BallIsClose.cpp  BallIsClose.h  BallIsMoving.cpp  BallIsMoving.h  BallKickedToOurGoal.cpp  BallKickedToOurGoal.h  BallKickedToTheirGoal.cpp  BallKickedToTheirGoal.h  BallNearOurGoalLineAndStill.cpp  BallNearOurGoalLineAndStill.h  BallNotTooClose.cpp  BallNotTooClose.h  BallOutOfField.cpp  BallOutOfField.h  BallPlacementLineIsClose.cpp  BallPlacementLineIsClose.h  CanPlay.cpp  CanPlay.h  CanReachPoint.cpp  CanReachPoint.hpp  CanReflectKick.cpp  CanReflectKick.h  CanSeeGoal.cpp  CanSeeGoal.h  CanShootToTarget.cpp  CanShootToTarget.h  Condition.cpp  Condition.h  DefenderGettingBall.cpp  DefenderGettingBall.h  HasBall.cpp  HasBall.hpp  HasClearShot.cpp  HasClearShot.h  IHaveBall.cpp  IHaveBall.hpp  IsBallCloseToBorder.cpp  IsBallCloseToBorder.h  (+42 more)
roboteam_ai/src/control/: BasicPosControl.cpp  ControlGoToPos.cpp  ControlGoToPos.h  ControlKick.cpp  ControlKick.h  ControlRotate.cpp  ControlRotate.h  ControlUtils.cpp  ControlUtils.h  Controller.cpp  Controller.h  Hungarian.h  PID.cpp  PID.h  PIDController.cpp  PIDController.h  PosController.cpp  PosController.h  PositionController.cpp  PositionController.h  PositionManager.cpp  PositionManager.h  PositionUtils.cpp  PositionUtils.h  RobotCommand.h  pid.cpp  pid.h
roboteam_ai/src/danger_finder/: CMakeLists.txt  DangerData.cpp  DangerFinder.cpp  DangerFinder.h  DangerFinderConfig.cpp  DangerModule.h  DistanceModule.cpp  DistanceModule.h
roboteam_ai/src/dangerfinder/: DangerData.cpp  DangerData.h  DangerFinder.cpp  DangerFinder.h  PartialResult.cpp  PartialResult.h
roboteam_ai/src/demo/: JoystickDemo.cpp  JoystickDemo.h
roboteam_ai/src/interface/: Interface.cpp  Interface.h  InterfaceValues.cpp  InterfaceValues.h  PidBox.cpp  PidBox.h  Robot.cpp  Robot.h  RobotsWidget.cpp  RobotsWidget.h  TreeVisualizerWidget.cpp  TreeVisualizerWidget.h  drawer.cpp  drawer.h  mainWindow.cpp  mainWindow.h  mainwindow.ui  visualizer.h  widget.cpp  widget.h
roboteam_ai/src/io/: IOManager.cpp  IOManager.h  IO_Node.cpp  IO_Node.h  RoleIOManager.cpp  RoleIOManager.h  Role_IO_Node.cpp  Role_IO_Node.h  StrategyIOManager.cpp  StrategyIOManager.h  Strategy_IO_Node.cpp  Strategy_IO_Node.h
roboteam_ai/src/jsons/: bigjson.json  jsonBasicTest.json  propertiesparsertest.json  sample.json  test.json
roboteam_ai/src/skills/: ActiveStop.cpp  ActiveStop.h  AimAt.cpp  AimAt.h  Attack.cpp  Attack.h  AvoidBall.cpp  AvoidBall.h  AvoidBallForBallPlacement.cpp  AvoidBallForBallPlacement.h  BallPlacementReceive.cpp  BallPlacementReceive.h  BallPlacementWithInterface.cpp  BallPlacementWithInterface.h  BasicGoToPos.cpp  BasicGoToPos.h  Chip.cpp  Chip.h  ChipForward.cpp  ChipForward.h  CoachDefend.cpp  CoachDefend.h  DefaultSkill.cpp  DefaultSkill.h  Defend.cpp  Defend.h  DefendOnRobot.cpp  DefendOnRobot.h  DemoAttack.cpp  DemoAttack.h  DemoInterceptBall.cpp  DemoInterceptBall.h  Dribble.cpp  Dribble.h  DribbleForward.cpp  DribbleForward.h  DribbleRotate.cpp  DribbleRotate.h  DriveWithInterface.cpp  DriveWithInterface.h  (+90 more)
roboteam_ai/src/treeinterp/: BTFactory.cpp  BTFactory.h  BTImport.h  JsonReader.cpp  JsonReader.h  PropertiesParser.cpp  PropertiesParser.h  (+7 more)
src/bt/: BehaviorTree.cpp  Blackboard.cpp  CMakeLists.txt  Composite.cpp  Decorator.cpp  Leaf.cpp  Node.cpp  Role.cpp  RoleDivider.cpp  Tree.cpp
src/control/: AnglePID.cpp  BasicPosControl.cpp  CMakeLists.txt  ControlModule.cpp  ControlUtils.cpp  ControlUtils.h  Hungarian.cpp  NewControlUtils.cpp  PosController.cpp  PositionUtils.cpp  pid.cpp
(+3931 files in other folders)
